# masumi-cardano-agent

./: .env.example  .gitignore  README.md  pyproject.toml  report.md
src/degen_crew/: crew.py  main.py
src/degen_crew/config/: agents.yaml  tasks.yaml
src/degen_crew/tools/: kupo.py  kupo_tool.py  token_registry_tool.py
