[project]
name = "degen_crew"
version = "0.1.0"
description = "degen_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
degen_crew = "degen_crew.main:run"
run_crew = "degen_crew.main:run"
train = "degen_crew.main:train"
replay = "degen_crew.main:replay"
test = "degen_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
